--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>踩踩鸳鸯</title>
     <meta itemprop="name" content="踩踩鸳鸯" />
-    <meta itemprop="description" content="新概念音游" />
+    <meta itemprop="description" content="烤米欢迎你" />
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, width=device-width,target-densitydpi=device-dpi" />
     <link href="./static/index.css" rel="stylesheet" type="text/css">
@@ -33,7 +33,7 @@
     <div class="welcome-bg FILL"></div>
     <div class="FILL BOX-M" style="position:absolute;top:0;left:0;right:0;bottom:0;z-index:5;">
         <div style="margin:0 8% 0 9%;">
-            <div style="font-size:2.6em; color:#FEF002;">新概念音游</div><br />
+            <div style="font-size:2.6em; color:#FEF002;">烤米欢迎你</div><br />
             <div id="desc" style="display: block;font-size:2.2em; color:#fff; line-height:1.5em;">
                 从最底下的开始<br />
                 看你能得多少分<br />
@@ -78,7 +78,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text">时间</span>
                     </div>
-                    <input type="text" id="gameTime" class="form-control" maxlength=4 placeholder="默认为20秒">
+                    <input type="text" id="gameTime" class="form-control" maxlength=4 placeholder="默认为30秒">
                 </div>
                 <!-- 此为无排行榜版本，隐藏了名字留言 -->
                 <div class="input-group mb-3" style="display: none;">
